--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ html, body {
  <h1>Resistencia Física</h1>
  <h1>¿Cómo mejorarla?</h1>
     <!-- LOGO REDLAND -->
-    <img src="Logo Redland.PNG" alt="Logo o imagen relacionada">
+    <img src="Logo Redland.png" alt="Logo o imagen relacionada">
     <p class="autor">Autor: Felipe Soza</p>
   </header>
 
@@ -162,7 +162,7 @@ En este artículo, se va a profundizar sobre cómo se puede crear una rutina de 
 
     <!-- IMG 1-->
     <div class="IMG">
-      <img src="Foto 1.WEBP" alt="Deporte y resistencia">
+      <img src="Foto 1.webp" alt="Deporte y resistencia">
     </div>
   </section>
 
@@ -185,7 +185,7 @@ Te dejó aquí distintos aspectos a tener en cuenta a la hora de realizar tu rut
 </p>
     <!-- IMG 2 -->
     <div class="IMG">
-      <img src="Foto 2.JPG" alt="Entrenamiento aeróbico">
+      <img src="Foto 2.jpg" alt="Entrenamiento aeróbico">
     </div>
 
     <p>4- Incrementar distancias: para mejorar, debes aumentar las distancias recorridas en los entrenamientos semanalmente, pero debes tener cuidado con las lesiones. Según los expertos, es importante no aumentar más de un 10% por semana. Es decir, si puedes correr 10 km, para la próxima semana no deberías de hacer más de 11 km, con el fin de prevenir lesiones graves. Aún así, es importante ir aumentando los km recorridos, incrementar las distancias poco a poco es muy eficiente para mejorar la resistencia física y puede ser tu base para mejorar el rendimiento durante los partidos. </p>
@@ -197,7 +197,7 @@ Te dejó aquí distintos aspectos a tener en cuenta a la hora de realizar tu rut
  </p>
   <!-- IMG 3 -->
  <div class="IMG">
-   <img src="Foto 3.JPG" alt="Resistencia física" width="400px" height="450px"> 
+   <img src="Foto 3.jpg" alt="Resistencia física" width="400px" height="450px"> 
  </div>
 
       <p>7- Trabaja la técnica: Una técnica de carrera más eficiente ayuda a cansarte menos. Al mejorar la técnica de carrera, puedes mantener un ritmo constante durante más tiempo sin fatigarse, promoviendo tu progreso físico, por lo que importa la manera en la que corres. Procura, a la hora de salir a trotar, mantener una postura erguida con la mirada al frente, brazos idealmente en 90 grados y evita pisar con el talón, busca aterrizar con la parte media o anterior del pie (metatarso), generando un impulso con los dedos. Además es importante controlar la respiración, busca siempre un ritmo constante para inhalar y exhalar. Todos estos detalles pueden parecer pequeños, pero a la hora de entrenar, generan grandes cambios a largo plazo
@@ -227,11 +227,11 @@ Para mejorar la resistencia aeróbica, creé una rutina de entrenamiento especif
 Datos recopilados: 
 Estos fueron los datos recolectados tras 12 semanas de entrenamiento.
  <div class="IMG">
-      <img src="DATOS 1.PNG" alt="Datos">
+      <img src="DATOS 1.png" alt="Datos">
     </div>
     Análisis de datos: (Este gráfico fue creado a partir de los datos obtenidos)
     <div class="IMG">
-      <img src="GRAPH 1.PNG" alt="Gráfico" width="950px" height="400px">
+      <img src="GRAPH 1.png" alt="Gráfico" width="950px" height="400px">
     </div>
 Reflexión: 
 Podemos concluir que durante el transcurso de las semanas, la curva de los KM recorridos tiene una pendiente que sube considerablemente, mientras que la curva de los PPM (pulsaciones por minuto), mantuvo una pendiente constante (a pesar de tener algunos puntos altos) . Esto nos quiere decir que mi corazón necesitó del mismo esfuerzo para lograr el doble de distancia, lo que significa que mi capacidad aeróbica mejoró considerablemente.
@@ -247,11 +247,11 @@ Para mejorar la resistencia anaeróbica, trabajé con una rutina de intervalos d
 Datos recopilados: 
 Estos fueron los datos recolectados tras 12 semanas de entrenamiento.
  <div class="IMG">
-      <img src="DATOS 2.PNG" alt="Datos">
+      <img src="DATOS 2.png" alt="Datos">
     </div>
     Análisis de datos: (Este gráfico fue creado a partir de los datos obtenidos)
     <div class="IMG">
-      <img src="GRAPH 2.PNG" alt="Gráfico" width="950px" height="400px">
+      <img src="GRAPH 2.png" alt="Gráfico" width="950px" height="400px">
     </div>
 Reflexión:
 En este gráfico, podemos observar que la curva de la velocidad promedio fue aumentando durante las semanas (ya que se aprecia una pendiente creciente), mientras que la curva sobre PPM se mantuvo mucho más constante, pues se puede ver una recta con mucha menor pendiente. Esto nos quiere decir, que a pesar de que los entrenamientos eran más intensos y de mayor velocidad, mi corazón siguió utilizando un esfuerzo similar, incluso menor. Esta conclusión puede representar que también hubo una mejora en la resistencia anaeróbica, en esfuerzos intensos y más cortos.
@@ -275,3 +275,4 @@ En este gráfico, podemos observar que la curva de la velocidad promedio fue aum
 
 </body>
 </html>
+
